Fix updating of the source when it was connected to before being populated.

BUG: 251459


svn path=/trunk/KDE/kdebase/workspace/; revision=1177289